# ev-charging-mlops-platform

./: app_streamlit.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
data/logs/: predictions.parquet
data/processed/: stations.parquet
data/raw/: ev_charging_stations.json  openchargemap_de.json
docker/: Dockerfile.api
ev_charging_mlops_platform/: config.py  data_ingest.py  feature_engineering.py  predict.py  prediction_log.py  settings.py  train_model.py
ev_charging_mlops_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: metadata.json
notebooks/: monitoring_basics.py
tests/: test_api.py  test_features.py
